--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<style>
     	/* BUG: Fixed width causes mobile overlap */
     	.container {
-        	width: 900px;
+        	width: 95%;
         	margin: 0 auto;
         	padding: 1.5rem;
     	}
